# IFC-toolkit

./: .gitignore  CMakeLists.txt  WebIfcDll.pc.in  WebIfcDllConfig.cmake.in
WebIfcDll/: CMakeLists.txt
engine_web-ifc/: CMakeLists.txt
engine_web-ifc/src/cpp/: web-ifc-wasm.cpp
engine_web-ifc/src/cpp/geometry/: IfcGeometryProcessor.cpp
